<resources>
    <string name="app_name">chunk</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="welcome_chunk">welcome to chunk </string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="title_activity_navigate_chunk">NavigateChunk</string>
    <string name="title_activity_new_chunk">New Chunk</string>
    <string name="title_activity_chunk_chat_activity">Chat Title</string>
    <string name="chunk_name">Hey! Make a title for the Chunk!  </string>
    <string name="chunk_place">Tap an address or use current location</string>
    <string name="Chunk_position">Where is your chunk?</string>
    <string name="title_location_permission">Can Chunk access the location? </string>
    <string name="title_storage_permission">Can Chunk access your storage?</string>
    <string name="text_location_permission">Chunk needs to access to your gps location. </string>
    <string name="ok">OK </string>
    <string name="title_activity_chunk_position">ChunkPosition</string>
    <string name="send_chunk_button">Send the current location</string>
    <string name="write_a_message">write a meessage</string>
    <string name="create_a_new_chunk_title_activity">create a new chunk</string>
    <string name="button_info_window">ENTER NOW</string>
    <string name="name_contact">Rose</string>
    <string name="long_text">How are you doing? This is a long message that should probably wrap.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_personal_chunks">PersonalChunks</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="MESSAGE_GPS_ERROR">Your GPS seems to be disabled, do you want to enable it? \nWARNING: with no GPS, map could not be loaded correctly</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="description_text_send_message">put a message</string>
    <string name="description_add_multimedia">add a photo to conversatione</string>
    <string name="description_send_the_message">send the message</string>
    <string name="description_map">map with chunk</string>
    <string name="description_gps_button">load gps and your currents chunk</string>
    <string name="insert_new_chunk_image">insert a new chunk image</string>
    <string name="insert_new_chunk_title">insert a new chunk title</string>
    <string name="select_position_of_chunk">insert a new chunk position</string>
    <string name="chunk_position_select">chunk position selected</string>
    <string name="chunk_create_button">create a new chunk</string>
    <string name="image_chunk">image of chunk in the map</string>
    <string name="image_user_sent">image of the user sending message</string>
    <string name="name_user_sent">name of the user sending message</string>
    <string name="message_user_sent"> message received from a user</string>
    <string name="my_message">my message chunk </string>
    <string name="center_map">center of the map</string>
    <string name="send_the_actual_position">send the actual position pointed</string>
    <string name="get_the_actual_position">get the actual position from gps</string>
    <string name="impossible_connection">Connection not working ... check your phone settings </string>
    <string name="loading_chunk">loading chunk in the actual position. Waiting for gps fix ... </string>
    <string name="loading_chunk_actual_position">loading chunk around the actual position </string>
    <string name="title_activity_on_boarding">OnBoarding</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome">Welcome to </string>
    <string name="first_description">The new way of chatting</string>
    <string name="title_1">Find your chunk in the map</string>
    <string name="description_1">You do not need to have your friend\'s numbers!\nUse the map to search and join the conversations around you.\nWe call them chunks.</string>
    <string name="title_2">Use the menu !</string>
    <string name="description_2">Use the menu to create new chunk in your area or to check the previous chunk joined</string>
    <string name="title_3">Create new chunk</string>
    <string name="description_3">Customize your new chunk with a photo, a title and a position. Your friends can join your chunk using the map!</string>
    <string name="title_4">Check your chunks</string>
    <string name="description_4">chat and chat again in your preferit chunks</string>
    <string name="title_5">Start to talk!</string>
    <string name="description_5">share your text and photos with people of your chunk</string>
    <string name="hint_address">search chunk address</string>
    <string name="no_message_until_now">no message until now</string>
    <string name="country_name">country name</string>
    <string name="your_chunk">your chunks</string>
    <string name="add_a_chunk">create chunk</string>
    <string name="error_on__request">errir in rocessing request</string>
    <string name="user_agent">user-agent</string>
    <string name="user_agent_per_nominatium">Mozilla/5.0 (Linux; Android 6.0.1; CPH1607 Build/MMB29M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/63.0.3239.111 Mobile Safari/537.36</string>
    <string name="etc">...</string>
    <string name="new_chunk_button">insert an image for chun</string>
    <string name="error_position_network">error getting the postion from the network</string>
    <string name="select_an_image_for_chunk">select an image for your chunk</string>
    <string name="select_a_title_for_chunk">select a title for your chunk</string>
    <string name="select_a_position_for_chunk">select a position for your chunk</string>
    <string name="google_play_error">error connecting with google play services </string>
    <string name="authentication_error">error of authentication ... retry with connection</string>
    <string name="notifications_admin_channel_name">chunk_admin</string>
    <string name="notifications_admin_channel_description">channel_for_chunk_admin</string>
    <string name="disable_notification">Disable Notification</string>
    <string name="disabled_notification">Disabled Notifications</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="enabled_notifications">Enabled Notification</string>
    <string name="message_preview_chat">va bhe pero onestamente ...</string>
</resources>
