<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChunkPosition">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:nextFocusForward="@+id/fab"/>

    </android.support.design.widget.AppBarLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp" />

    <AutoCompleteTextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/hint_address"
        android:id="@+id/search"
        android:layout_marginTop="90dp"
        android:layout_gravity="center|top"
        android:background="@drawable/customborder"
        android:padding="10dp"
        android:nextFocusForward="@+id/fab"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="95dp"
        app:srcCompat="@android:drawable/ic_menu_compass"
        android:contentDescription="@string/get_the_actual_position"
        android:nextFocusForward="@+id/sendPosition"
        />

    <LinearLayout
        android:id="@+id/sendPosition"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|center"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/customborder"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:contentDescription="@string/send_the_actual_position">

        <TextView
            android:id="@+id/sendLocationButtonTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="2dp"
            android:text="@string/send_chunk_button"
            android:textColor="@color/colorName"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionLatLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="2dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:paddingBottom="2dp"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/gps_location"
        android:gravity="center"
        android:contentDescription="@string/center_map"/>
</android.support.design.widget.CoordinatorLayout>