<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NavigateChunk"
    android:nextFocusForward="@+id/map_explore_chunk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_map">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/toolbar_title"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/chunk_logo"
                    android:contentDescription="@string/app_name"/>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <org.osmdroid.views.MapView
            android:id="@+id/map_explore_chunk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:contentDescription="@string/description_map"
            android:nextFocusForward="@+id/search"/>
    </LinearLayout>

    <AutoCompleteTextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/hint_address"
        android:id="@+id/search"
        android:layout_marginTop="70dp"
        android:layout_gravity="center|top"
        android:background="@drawable/customborder"
        android:padding="10dp"
        android:nextFocusForward="@+id/fab"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_gravity="top|center"
        android:layout_marginTop="120dp"

        />
    <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="30dp"
    android:tint="@android:color/background_light"
    app:srcCompat="@android:drawable/ic_menu_compass"
        android:contentDescription="@string/description_gps_button"
        android:nextFocusForward="@+id/fab_load_center"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_load_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="90dp"
        android:tint="@android:color/background_light"
        app:srcCompat="@drawable/ic_refresh"
        android:contentDescription="@string/description_gps_button"
        android:nextFocusForward="@+id/map_explore_chunk"/>


</android.support.design.widget.CoordinatorLayout>